[build-system]
requires = [
    "numpy >=1.16.4",
    "scipy <= 1.2.1",
    "matplotlib <= 2.2.2",
	"flit_core >=3.2,<4",
	"python_version >= '3.7'",
    "flit_core >=3.2,<4"
	]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{
	name = "Cindy Barrios",
	email = "cindy.barrios@ucsf.edu"
	}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
	"pytest: 7.2.1",
    "numpy >=1.16.4",
    "scikit-learn >=0.21.3",
]

[project.urls]
Home = "git@github.com:cindykhris/hw4-prim-mst_cb.git"